<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/guideList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2dp"
        card_view:contentPadding="1dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintHorizontal_bias="0.538"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <android.widget.ImageView
                android:id="@+id/species_photo"
                android:layout_width="0dp"
                android:layout_height="163dp"
                android:elevation="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintRight_toRightOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/species_name"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:textSize="18sp"
                android:textStyle="italic"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/species_photo"
                android:layout_marginRight="4dp"
                card_view:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/info"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="46dp"
                android:background="@color/cardview_light_background"
                android:backgroundTint="@color/cardview_light_background"
                android:elevation="2dp"
                android:text="Info"
                android:textColor="@color/greenTese"
                card_view:layout_constraintLeft_toRightOf="@+id/map"
                card_view:layout_constraintTop_toBottomOf="@+id/species_name"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/map"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="46dp"
                android:background="@color/cardview_light_background"
                android:backgroundTint="@color/cardview_light_background"
                android:elevation="2dp"
                android:text="@string/mapCardView"
                android:textColor="@color/greenTese"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/species_name"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/takenBy"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toTopOf="@+id/map"
                card_view:layout_constraintLeft_toLeftOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/species_name"
                card_view:layout_constraintVertical_bias="0.521" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/info"
                card_view:layout_constraintLeft_toRightOf="@+id/textView2"
                card_view:layout_constraintTop_toBottomOf="@+id/species_name"
                card_view:layout_constraintVertical_bias="0.521" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>