<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Avistamentos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Galeria de Avistamentos" />
        <item
            android:id="@+id/nav_waitingPhotos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Novos Avistamentos" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Guia" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_manage"
            android:title="Mapa de Espécies" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_menu_share"
                android:title="Opções de Conta" />
            <item
                android:id="@+id/nav_signOut"
                android:icon="@drawable/ic_menu_send"
                android:title="Terminar Sessão" />
        </menu>
    </item>

</menu>
