...
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/greenTese"
        android:text="@string/goToMA"
        android:textSize="12sp"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/goToGA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/greenTese" />

    <Button
        android:id="@+id/goToGA"
...
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/greenTese"
        android:text="@string/goToGA"
        android:textSize="12sp"
        app:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/goToLE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToLE"
        android:layout_width="120dp"
...
